syntax = "proto3";

package experiment;
option go_package = "/experiment";

import "google/protobuf/empty.proto";

service Experiments {
  rpc Start (google.protobuf.Empty) returns (StartResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc MakeGuess (GuessRequest) returns (GuessResponse) {}
  rpc GetUsers (google.protobuf.Empty) returns (stream UserResponse) {}
  rpc GetScores (google.protobuf.Empty) returns (stream ScoreResponse) {}
}

message RegisterRequest {
  string username = 1;
}

message RegisterResponse {
  string status = 1;
}

message GuessRequest {
  uint64 guess = 1;
  string username = 2;
}

message GuessResponse {
  string result = 1;
}

message StartResponse {
  string msg = 1;
}

message UserResponse {
  string username = 1;
}

enum GuessStatus {
  InProgress = 0;
  Finished = 1;
}

message ScoreResponse {
  string username = 1;
  uint64 attemptCount = 2;
  GuessStatus enum = 3;
}
